--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="manifest" href="./favicon/site.webmanifest" />
     <title>Design</title>
   </head>
-  <body data-barba="wrapper">
+  <body data-barba="wrapper" data-check="home">
     <div class="wrapper" data-barba="container" data-barba-namespace="home">
       <nav class="hidden">
         <div class="nav__container">
@@ -260,18 +260,18 @@
       </footer>
     </div>
 
-    <script src="https://unpkg.com/@barba/core"></script>
-    <script src="https://unpkg.com/@barba/css"></script>
-    <script
+    <!-- <script src="https://unpkg.com/@barba/core"></script> -->
+    <!-- <script src="https://unpkg.com/@barba/css"></script> -->
+    <!-- <script
       src="https://code.jquery.com/jquery-1.12.4.min.js"
       integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
-    <script src="./scroll/jquery.mCustomScrollbar.concat.min.js"></script>
+    <!-- <script src="./scroll/jquery.mCustomScrollbar.concat.min.js"></script> -->
 
     <script src="./js/home.js"></script>
-    <script src="./js/script.js"></script>
+    <!-- <script src="./js/script.js"></script> -->
   </body>
 </html>
